Fixied a rendering & a layout issues'

--- a/public/scss/sections/_navbar.scss
+++ b/public/scss/sections/_navbar.scss
@@ -78,7 +78,6 @@
 	.nav-item {
 		font-size: 1.3rem;
 		padding: 0 0.2rem;
-		margin: 1rem 0;
 	}
 
 	.show {
